# domain_generator

./: .gitignore  README.md  entrypoint.sh  pyproject.toml  settings.ini  setup.sh
docker/: Dockerfile  api.dockerfile  compose.env  compose.yaml
scripts/: generate_domains.py  get_shortest_path.py
src/domain_generator/: __init__.py  generate.py  schemas.py  settings.py  shortest_path.py  utils.py
