[project]
name = "domain_generator"
authors = [{ name = "Tadd Bindas", email = "Tadd.Bindas@rtx.com" }]
dependencies = [
    "pydantic~=1.10",
    "pydantic-xml~=0.5",
    "httpx==0.27.0",
    "geopandas==1.0.1",
    "numpy==1.26.3",
    "xarray==2024.3.0",
    "numpy==1.26.3",
    "matplotlib==3.9.0",
    "pandas >=1.1.5, <=2.2.0",
    "pika==1.3.2",
    "xmltodict==0.12.0",
    "lxml==5.3.0",
    "pytest==8.3.2",
    "rpy2==3.5.16",
]
description = "Code to generate a domain of interest for replace and route"
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/domain_generator"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
